# llm-trainer

./: README.md  pyproject.toml
llm_trainer/function_calling/: __main__.py
llm_trainer/utils/: parser.py
notebook/: clean_dataset.ipynb  train_function_calling.ipynb
scripts/: setup.sh  setup_colab.sh  setup_kaggle.sh  train_function_calling.sh
