[tool.poetry]
name = "llm-trainer"
version = "0.1.0"
description = ""
authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["colab-new"]}
einops = "^0.7.0"
transformers = "^4.40.0"
datasets = "^2.19.0"
torch = "*"
wandb = "^0.16.6"
huggingface-hub = "^0.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
